[fix] squash bkg image; del old css

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -32,7 +32,7 @@ body {
 /* BODY BG */
 body {
   background: #2b323f;
-  background-image: url(../images/bckg/body-bg/wood-7.jpg);
+  background-image: url(../images/bckg/body-bg/bkg.jpg);
   background-size: cover;
   background-position: center 40%;
   background-repeat: repeat-x;
